mavenize the repo. Mostly file moves to maven layout form